main - add DTO management - add reception controllers, filter records