@@ -4,11 +4,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+import ru.dponyashov.dto.ClientDto;
+import ru.dponyashov.dto.NotificationDto;
 import ru.dponyashov.dto.filter.FilterClient;
 import ru.dponyashov.entity.Client;
 import ru.dponyashov.entity.Notification;
 import ru.dponyashov.exception.NotFoundEntityException;
+import ru.dponyashov.mappers.Mapper;
 import ru.dponyashov.repository.ClientRepository;
 import ru.dponyashov.repository.NotificationRepository;
 import ru.dponyashov.safety.DataEncoder;
@@ -16,7 +18,6 @@ import ru.dponyashov.service.ClientService;
 import ru.dponyashov.utils.StringUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,15 +28,18 @@ public class ClientServiceImpl implements ClientService {
     private final ClientRepository clientRepository;
     private final NotificationRepository notificationRepository;
 
+    private final Mapper<Client, ClientDto> clientMapper;
+    private final Mapper<Notification, NotificationDto> notificationMapper;
+
     @Override
-    public List<Client> findAll(){
+    public List<ClientDto> findAll(){
         return clientRepository.findAll().stream()
-                .peek(dataEncoder::decode)
-                .collect(Collectors.toList());
+                .map(client -> dataEncoder.decode(clientMapper.toDto(client)))
+                .toList();
     }
 
     @Override
-    public List<Client> findWithFilter(FilterClient filterClient) {
+    public List<ClientDto> findWithFilter(FilterClient filterClient) {
         var encodeFilter = dataEncoder.encode(filterClient);
         return clientRepository.findWithFilter(
                         StringUtils.stringFilterPattern(encodeFilter.getClientName()),
@@ -43,55 +47,56 @@ public class ClientServiceImpl implements ClientService {
                         Pageable.ofSize((encodeFilter.getPageSize() <= 0 ? 25 : encodeFilter.getPageSize()))
                                 .withPage(encodeFilter.getPageNumber())
                 ).stream()
-                .peek(dataEncoder::decode)
+                .map(client -> dataEncoder.decode(clientMapper.toDto(client)))
                 .toList();
     }
 
     @Override
-    public Notification findNotifyById(Long notifyId) {
-        return notificationRepository.findById(notifyId)
-                .orElseThrow(()-> new NotFoundEntityException("Notification", "id", String.valueOf(notifyId)));
-    }
-
-    @Override
-    public List<Notification> findAllNotification() {
-        return notificationRepository.findAllNotification();
-    }
-
-    @Override
-    public Client findById(Long id){
-        return dataEncoder.decode(clientRepository.findById(id)
-                .orElseThrow(() -> new NotFoundEntityException("Client", "id", String.valueOf(id)))
+    public NotificationDto findNotifyById(Long notifyId) {
+        return notificationMapper.toDto(
+                notificationRepository.findById(notifyId)
+                .orElseThrow(()-> new NotFoundEntityException("Notification", "id", String.valueOf(notifyId)))
         );
     }
 
     @Override
-    public List<Client> findByName(String name){
-        return clientRepository.findByName(name).stream()
-                .peek(dataEncoder::decode)
-                .collect(Collectors.toList());
+    public List<NotificationDto> findAllNotification() {
+        return notificationRepository.findAllNotification().stream()
+                .map(notificationMapper::toDto)
+                .toList();
     }
 
     @Override
-    @Transactional
+    public ClientDto findById(Long id){
+        return dataEncoder.decode(clientMapper.toDto(
+                clientRepository.findById(id)
+                        .orElseThrow(() -> new NotFoundEntityException("Client", "id", String.valueOf(id)))
+                )
+        );
+    }
+
+    @Override
+    public List<ClientDto> findByName(String name){
+        return clientRepository.findByName(name).stream()
+                .map(client -> dataEncoder.decode(clientMapper.toDto(client)))
+                .toList();
+    }
+
+    @Override
     public void delete(Long id) {
         clientRepository.deleteById(id);
         log.info("Удален клиент с id: {}", id);
     }
 
     @Override
-    @Transactional
-    public Client save(Client client){
-        Client clientForSave = Client.builder().
-                id(client.getId()).
-                name(client.getName()).
-                phone(client.getPhone()).
-                mail(client.getMail()).
-                notifications(client.getNotifications()).
-                build();
-        Client savedClient = clientRepository.save(dataEncoder.encode(clientForSave));
-        log.info("Записаны данные клиента с id: {}", savedClient.getId());
-        client.setId(savedClient.getId());
-        return dataEncoder.decode(client);
+    public ClientDto save(ClientDto clientDto){
+        Client clientForSave = clientMapper.toEntity(dataEncoder.encode(clientDto));
+
+        Client savedClient = clientRepository.save(clientForSave);
+
+        ClientDto savedClientDto = dataEncoder.decode(clientMapper.toDto(savedClient));
+
+        log.info("Записаны данные клиента с id: {}", savedClientDto.getId());
+        return savedClientDto;
     }
 }
